referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-infra-gateway-to-dil-connector
  namespace: dil-connector
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: infra-gateway
  to:
    - group: ""
      kind: Service
      name: dil-connector
