dataplane-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dil-connector-dataplane
  namespace: dil-connector
spec:
  selector:
    app: dil-connector-dataplane
  ports:
    - name: http
      port: 8284
      targetPort: http
