postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dil-connector-postgres
  namespace: dil-connector
spec:
  selector:
    app: dil-connector-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
