service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dil-connector
  namespace: dil-connector
spec:
  selector:
    app: dil-connector
  ports:
    - name: http
      port: 8282
      targetPort: http
