route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dil-connector
  namespace: infra-gateway
spec:
  parentRefs:
    - name: infra
      namespace: infra-gateway
  hostnames:
    - "connector.dil.collab-cloud.eu"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dil-connector
          namespace: dil-connector
          port: 8282
